Minor Changes - Replace h3 to h4 on Banner. - Fix bottom padding on Banner. - Use primary color for Info background. - Remove text align center on Info. - Add acute to Maipu on Navbar.

--- a/src2/components/Banner.scss
+++ b/src2/components/Banner.scss
@@ -1,10 +1,9 @@
 $banner-padding-top: 24px;
-$banner-padding-bot: 20px;
+$banner-padding-bot: 24px;
 
 
 .banner {
 	background: black;
 	color: white;
 	padding: $banner-padding-top $banner-padding-bot;
-
 }
